fix strong styling on firefox

--- a/src/assets/stylesheets/Instructions.scss
+++ b/src/assets/stylesheets/Instructions.scss
@@ -10,6 +10,10 @@
     margin: 0;
   }
 
+  strong {
+    font-weight: $font-weight-bold;
+  }
+
   img {
     max-width: 100%;
   }
